# bookstore

./: .dockerignore  .env.db  .env.dev  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pg_hba.conf  pyproject.toml  pytest.ini  requirements.txt  test_db_connection.py  test_dotenv.py
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: factories.py  views.py
order/migrations/: 0001_initial.py  0002_alter_order_options.py
order/models/: order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py  0002_alter_product_price.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viwset.py
product/tests/tests_serializers/: test_category_serializer.py  test_product_serializer.py
product/viewsets/: category_viewset.py  product_viewset.py
