[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Flavio Carvalho <professorflaviosoares@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "8.0.2"
factory-boy = "3.3.0"
django = "5.0.2"
django-extensions = "3.2.3"
django-debug-toolbar = "4.4.6"
djangorestframework = "3.15.2"  # Adicione esta linha
psycopg2-binary = "^2.9.9"
flake8 = "^7.1.1"
argcomplete = "3.4.0"
asgiref = "3.7.2"
black = "24.4.2"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.6.2"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.8"
dulwich = "0.21.7"
et-xmlfile = "1.1.0"
faker = "23.3.0"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
fpdf = "1.7.2"
idna = "3.7"
iniconfig = "2.0.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
keyring = "24.3.1"
more-itertools = "10.3.0"
msgpack = "1.0.8"
mypy-extensions = "1.0.0"
numpy = "1.26.4"
openpyxl = "3.1.2"
packaging = "23.2"
pandas = "2.2.1"
pathspec = "0.12.1"
pdfkit = "1.0.0"
pexpect = "4.9.0"
pillow = "10.3.0"
pipx = "1.6.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
pluggy = "1.4.0"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
ptyprocess = "0.7.0"
pyproject-hooks = "1.1.0"
pytest-django = "4.8.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
pywin32-ctypes = "0.2.2"
rapidfuzz = "3.9.4"
reportlab = "4.2.2"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
six = "1.16.0"
sqlparse = "0.4.4"
tomlkit = "0.13.0"
trove-classifiers = "2024.7.2"
tzdata = "2024.1"
unidecode = "1.3.8"
urllib3 = "2.2.2"
userpath = "1.9.2"
virtualenv = "20.26.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
